--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap');
+
 :root{
     --branco: #FFFFFF;
-    --azul: #1F3CDB;
+    --azul: #76BDFF;
+    --roxo: #CDA6FF;
+    --vermelho: #FF9DA9;
+    --amarelo: #FFCB9A;
+    --roxo: #9662AE;
+    --rosa: #FF83CD;
+    --rosa: #FFDFDF;
+    --rosa: #FF0099;
+    --rosa: #FF0099;
 }
