--- a/style.css
+++ b/style.css
@@ -8,7 +8,12 @@
     --amarelo: #FFCB9A;
     --roxo: #9662AE;
     --rosa: #FF83CD;
-    --rosa: #FFDFDF;
+    --rosa-fundo: #FFDFDF;
     --rosa: #FF0099;
     --rosa: #FF0099;
+}
+body{
+    background-color: var(--rosa-fundo);
+    color: var(--branco);
+    font-family: 'Chakra Petch', '';
 }
