--- a/style.css
+++ b/style.css
@@ -21,5 +21,5 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #FF83CD;
+    align-items: center;
 }
