--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     color: var(--branco);
     font-family: 'Chakra Petch', '';
 }
-.conteudo.principa{
+.conteudo.principal{
     display: flex;
     flex-direction: column;
     justify-content: center;
