--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 body{
     background-color: var(--rosa-fundo);
     color: var(--branco);
-    font-family: 'Chakra Petch', '';
+    font-family: 'Chakra Petch', sans-serif;
 }
 .conteudo.principal{
     display: flex;
