--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     color: var(--branco);
     font-family: 'Chakra Petch', sans-serif;
 }
-.conteudo.principal{
+.conteudo-principal{
     display: flex;
     flex-direction: column;
     justify-content: center;
