--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap');
 
 :root{
-    --branco: #7c0067;
+    --branco: #d1528d;
     --azul: #76BDFF;
     --roxo: #CDA6FF;
     --vermelho: #FF9DA9;
