--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
     width: 100%;
     margin: 0 auto;
 }
-.titulo-principal{
+.titulo-orincipal{
     text-align: left;
     width: 100%;
     font-size: 32px;
