--- a/style.css
+++ b/style.css
@@ -9,8 +9,7 @@
     --roxo: #9662AE;
     --rosa: #FF83CD;
     --rosa-fundo: #FFDFDF;
-    --rosa: #FF0099;
-    --rosa: #FF0099;
+    --botao-inativo: #FF0099;
 }
 body{
     background-color: var(--rosa-fundo);
@@ -36,4 +35,5 @@ body{
 }
 .botao{
     font-family: "Chakra Petch", Sans-serif;
+    background-color: var(--botao-inativo);
 }
