--- a/style.css
+++ b/style.css
@@ -36,4 +36,10 @@ body{
 .botao{
     font-family: "Chakra Petch", Sans-serif;
     background-color: var(--botao-inativo);
+    color: var(--branco);
+    display: flex;
+    justify-content: center;
+    padding: 1em;
+    font-size: 18px;
+    align-items: center;
 }
