--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     --vermelho: #FF9DA9;
     --amarelo: #FFCB9A;
     --roxo: #9662AE;
-    --rosa: #FF83CD;
+    --rosa: #ffbae4;
     --rosa-fundo: #FFDFDF;
     --botao-inativo: #d7ccfff3;
 }
