--- a/style.css
+++ b/style.css
@@ -45,5 +45,5 @@ body{
     font-size: 18px;
     align-items: center;
     width: 100%;
-    border-bottom: 4px solid var();
+    border-bottom: 4px solid var(--botao-ativo);
 }
