--- a/style.css
+++ b/style.css
@@ -60,9 +60,9 @@ body{
 }
  
 .abas-texto{
-background-color: var(--rosa-fundo);
-padding: 40px;
-border-radius: 0 0 40px 40px;
+    background-color: var(--rosa-fundo);
+    padding: 40px;
+    border-radius: 0 0 40px 40px;
 }
 
 .aba-conteudo.ativo{
@@ -90,7 +90,10 @@ border-radius: 0 0 40px 40px;
     color:  var(--rosa);
     text-transform: uppercase;
 }
-
+.contador{
+    text-align: center;
+    font-size: 20px;
+}
 @media screen and (min-width:768px){
     .botoes{
         display: flex;
